--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,35 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Week4Lab</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+    <head>
+        <title>Mallory Furniture!</title>
+        <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+        <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+        <%= csrf_meta_tags %>
+    </head>
+    <body>
+        <div class="container-fluid">
+            <div class="row header">
+                <a href="/">
+                    <div class="col-xs-12 text-center">
+                        <h1 class="company_name">Mallory Furniture</h1>
+                    </a>
 
-<%= yield %>
+                </div>
+            </div>
+        </div>
+        <%= yield %>
+        <div class="container-fluid">
+            <footer>
+              <div class="row footer">
+                  <% @unique_categories.each do |category| %>
+                  <div class="col-xs-2 categories text-center">
+                      <h3>
+                          <%= link_to category.titlecase, category_path(id: category), class:"footer_links" %></h3>
+                  </div>
+                  <% end %>
+              </div>
 
-</body>
+            </footer>
+        </div>
+    </body>
 </html>
