--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,14 +2,14 @@
     <div class="littlebox">
         <p>
             <span>
-                <h1>Your Furniture is old</h1>
+                <h1 class="title">Your Furniture is old</h1>
             </span>
             <h2 class="text-right faded">
                 <small>Ours is older.</small>
             </h2>
         </p>
         <p>
-            <%= link_to 'Check out our Products', category_path(id:"all"), class: "btn btn-primary" %>
+            <%= link_to 'Check out our Products', category_path(id:"all"), class: "btn btn-primary main-btn" %>
         </p>
     </div>
 </div>
